# svetka-py

./: .coverage  .gitignore  QWEN.md  README.md  build_exe.py  config.yaml  main.py  pyproject.toml  svetka.spec
.github/workflows/: ci.yml  release.yml
assets/: error_overlay_template.html  guides.json
assets/prompt_blocks/: behaviors.json  behaviors_2.json  behaviors_3.json  constraints.json  constraints_2.json  constraints_3.json  context.json  context_2.json  context_3.json  habits.json  habits_2.json  habits_3.json  humor.json  humor_2.json  humor_3.json  intelligence.json  intelligence_2.json  intelligence_3.json  roles.json  roles_2.json  roles_3.json  schema.json  special_modes.json  special_modes_2.json  special_modes_3.json  styles.json  styles_2.json  styles_3.json  tone.json  tone_2.json  tone_3.json
cache/vision/: test_phase3.webm
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor-mcp/: install_mcp.py  server.py
conductor/instructions/: bp_config.md  (+5 more)
core/: api_bridge.py  config.py  guide_manager.py  guide_schema.py  prompt_manager.py
logs/: .cba84a1e0c5e394f5795ea5caf6b7d8c33af7dc1-audit.json
tests/: test_api_tab.py  test_api_tab_integration.py  test_appearance_tab.py  test_audio_processor.py  test_audio_tab.py  test_config.py  test_guides.py  test_memory_logic.py  test_memory_tab.py  test_personality_tab.py  test_privacy_tab.py  test_prompt_blocks.py  test_ui.py  test_vision_processor.py  test_vision_tab.py
ui/: error_window.py  guide_widget.py  main_window.py  verification_dialog.py
(+87 files in other folders)
